fixing rendering issue on mobile / hiding article images

--- a/_sass/4-layouts/_article.scss
+++ b/_sass/4-layouts/_article.scss
@@ -1,5 +1,20 @@
 .article {
   margin-bottom: 20px;
+  padding-bottom: 20px;
+
+  @media only screen and (max-width: $mobile) {
+    .article__wrapper .article__image {
+      display: none;
+    }
+
+    .article__wrapper .article__content {
+      width: 100%; // Adjust content width when the image is hidden
+      // Other styles for mobile...
+      .article__title {
+        font-size: 27px;
+      }
+    }
+  }
 
   .article__wrapper {
     display: flex;
@@ -101,7 +116,7 @@
   }
 
   .article__image {
-    width: 20%;
+    width: 30%;
     display:block;
     background-position: center;
     background-size: contain;
@@ -121,7 +136,7 @@
   }
 
   .article__content {
-    width: 80%;
+    width: 70%;
     height: auto;
     padding: 20px;
     margin-left: 1%;
@@ -196,26 +211,26 @@
     margin-left: auto;
   }
 
-  @media only screen and (max-width: $tablet) {
-    .article__wrapper {
-      flex-direction: column;
-    }
+  // @media only screen and (max-width: $tablet) {
+  //   .article__wrapper {
+  //     flex-direction: column;
+  //   }
 
-    .article__image {
-      width: 100%;
-    }
+  //   .article__image {
+  //     width: 100%;
+  //   }
 
-    .article__content {
-      width: 90%;
-      padding: 20px;
-      margin: -10% 0 0 0;
-    }
+  //   .article__content {
+  //     width: 90%;
+  //     padding: 20px;
+  //     margin: -10% 0 0 0;
+  //   }
 
-    .article-without-image {
-      width: 90%;
-      margin: 0;
-    }
-  }
+  //   .article-without-image {
+  //     width: 90%;
+  //     margin: 0;
+  //   }
+  // }
 
   @media only screen and (max-width: $mobile) {
     .article__content {
@@ -223,6 +238,20 @@
       .article__title {
         font-size: 27px;
       }
+    }
+  }
+
+  @media only screen and (max-width: $tablet) {
+    .article__wrapper {
+      flex-direction: column;
+    }
+
+    .article__wrapper .article__image {
+      display: none; // Hide the image on mobile
+    }
+
+    .article__wrapper .article__content {
+      width: 100%; // Use full width when image is hidden
     }
   }
 }
